feat: initial roles implementation
